tests/fixtures/LatestTests/DynamicVariableTests/errors/dyn_str_to_decimal.fg
/; EXPECT_ERROR: Runtime Error: Cannot cast Dynamic value to Decimal.
var _str = "Hello"
println(Decimal(_str))